[project]
name = "oio"
dynamic = [
  "authors",
  "classifiers",
  "description",
  "entry-points",
  "readme",
  "scripts",
  "version",
]
dependencies = [
  "cliff~=4.8.0",
  "cryptography>=2.0.2",
  "eventlet~=0.38.2",
  "gevent>=22.10.2",
  "importlib_resources",
  "jsonschema>=4.17.3",
  "pika~=1.3.2",
  "PyECLib~=1.6.4",
  "PyYAML~=6.0.0",
  "redis~=5.0.8",
  "reflink>=0.2.1",
  "requests~=2.31.0",
  "simplejson~=3.19.0",
  "statsd",
  "urllib3~=1.26.20",
  "xmltodict",
]

[build-system]
requires = ["build", "pbr>=6.0.0", "wheel"]
build-backend = "pbr.build"

[project.optional-dependencies]
# All dependencies needed to run the program (but not to test it)
all = ["oio[event,object,service,zk,boto]"]

# Use the event system
event = [
  "confluent_kafka~=2.10.0",
]
# Check the code
lint = [
  "pylint",
  "ruff",
]
# Read or write objects
object = [
  "blake3~=0.3.4",
]
# Run services (account, xcute, etc.)
service = [
  "foundationdb~=6.3.15",
  "gunicorn~=23.0.0",
  "werkzeug~=2.2.3",
]
# Run tests
test = [
  "coverage",
  "fixtures>=1.4.0",
  "gcovr",
  "mock>=1.0",
  "pytest",
  "pytest-rerunfailures",
  "pytest-timeout",
  "pytest-timer",
  "oio[all]",
  "oio[lint]",
]
# Run specific bucket crawler / xcute-customer service
boto = [
  "boto3~=1.38.42",
  "botocore~=1.38.42",
]
# Talk to Zookeeper (with openio CLI)
zk = [
  "kazoo~=2.10.0",
]

[tool.pylint]
# Please keep this section event if the default config uses ruff

[tool.pylint.classes]
defining-attr-methods = ["__init__", "__new__", "setUp", "asyncSetUp", "__post_init__", "init", "init_db"]

[tool.pylint."messages control"]
disable = ["broad-except", "missing-module-docstring"]

[tool.pytest.ini_options]
addopts = [
  "-l",
  "--tb=short",
  "--timer-top-n=10",
]
log_level = "DEBUG"
markers = [
  "lifecycle: lifecycle-related tests",
  "no_thread_patch: tests which must run with unpatched thread module",
]

[tool.ruff]
target-version = "py37"
line-length = 88
extend-include = ["bin/*", "tools/**/*.py"]
exclude = ["tools/oio-bootstrap.py", "bin/encryption_tool/README.md", "confgen.py"]

[tool.ruff.lint]
# E: pycodestyle (errors)
# I: isort
# PLC: pylint (convention)
# PLE: pylint (errors)
extend-select = ["E", "I", "PLC", "PLE"]
# FIXME(FVE): PLC0415 -> `import` should be at the top-level of a file
ignore = ["D203", "D212", "PLC0415"]

[tool.ruff.lint.per-file-ignores]
"{tests,tools}/**" = ["D"]

[tool.setuptools.dynamic]
readme = {file = "README.md", content-type = "text/markdown"}
