[metadata]
name = oio
description = OpenIO Software Defined Storage
summary = OpenIO SDS
author = OpenIO
author_email = support@openio.io
url = https://github.com/open-io/oio-sds

[pbr]
skip_authors = True
skip_changelog = True

[files]
packages =
    oio
scripts =
    bin/oio-account-server
    bin/oio-event-agent
    bin/oio-blob-registrator
    bin/oio-blob-auditor
    bin/oio-blob-mover
    bin/oio-blob-indexer
    bin/oio-blob-rebuilder
    bin/oio-conscience-agent
    bin/oio-crawler-storage-tierer
    bin/oio-crawler-integrity

[entry_points]
console_scripts =
    openio = oio.cli.common.shell:main

openio.account =
    account_show = oio.cli.account.account:ShowAccount
    account_create = oio.cli.account.account:CreateAccount
    account_delete = oio.cli.account.account:DeleteAccount
    account_list = oio.cli.account.account:ListAccounts
    account_set = oio.cli.account.account:SetAccount
    account_unset = oio.cli.account.account:UnsetAccount
    account_refresh = oio.cli.account.account:RefreshAccount
    account_flush = oio.cli.account.account:FlushAccount
openio.container =
    container_create = oio.cli.container.container:CreateContainer
    container_delete = oio.cli.container.container:DeleteContainer
    container_touch = oio.cli.container.container:TouchContainer
    container_list = oio.cli.container.container:ListContainer
    container_save = oio.cli.container.container:SaveContainer
    container_set = oio.cli.container.container:SetContainer
    container_locate = oio.cli.container.container:LocateContainer
    container_show = oio.cli.container.container:ShowContainer
    container_unset = oio.cli.container.container:UnsetContainer
    container_refresh = oio.cli.container.container:RefreshContainer
    container_snapshot = oio.cli.storage.container:SnapshotContainer
openio.object =
    object_locate = oio.cli.object.object:LocateObject
    object_show = oio.cli.object.object:ShowObject
    object_create = oio.cli.object.object:CreateObject
    object_save = oio.cli.object.object:SaveObject
    object_drain = oio.cli.object.object:DrainObject
    object_delete = oio.cli.object.object:DeleteObject
    object_touch = oio.cli.object.object:TouchObject
    object_list = oio.cli.object.object:ListObject
    object_set = oio.cli.object.object:SetObject
    object_unset = oio.cli.object.object:UnsetObject
openio.reference =
    reference_locate = oio.cli.reference.reference:LocateReference
    reference_show = oio.cli.reference.reference:ShowReference
    reference_list = oio.cli.reference.reference:ListReference
    reference_create = oio.cli.reference.reference:CreateReference
    reference_delete = oio.cli.reference.reference:DeleteReference
    reference_set = oio.cli.reference.reference:SetReference
    reference_unset = oio.cli.reference.reference:UnsetReference
    reference_link = oio.cli.reference.reference:LinkReference
    reference_poll = oio.cli.reference.reference:PollReference
    reference_unlink = oio.cli.reference.reference:UnlinkReference
    reference_force = oio.cli.reference.reference:ForceReference
openio.volume =
    volume_show = oio.cli.volume.volume:ShowVolume
    volume_assignation = oio.cli.volume.volume:DisplayVolumeAssignation
    volume_admin_incident = oio.cli.volume.volume:IncidentAdminVolume
    volume_admin_lock = oio.cli.volume.volume:LockAdminVolume
    volume_admin_unlock = oio.cli.volume.volume:UnlockAdminVolume
    volume_admin_show = oio.cli.volume.volume:ShowAdminVolume
    volume_admin_clear = oio.cli.volume.volume:ClearAdminVolume
    volume_admin_bootstrap = oio.cli.volume.volume:BootstrapVolume

openio.directory =
    directory_bootstrap = oio.cli.directory.directory:DirectoryInit
    directory_dump = oio.cli.directory.directory:DirectoryList
    directory_rebalance = oio.cli.directory.directory:DirectoryRebalance
    directory_decommission = oio.cli.directory.directory:DirectoryDecommission
openio.events =
    events_exhume = oio.cli.events.events:EventsExhume
    events_stats = oio.cli.events.events:StatsEvents
openio.cluster =
    cluster_show = oio.cli.cluster.cluster:ClusterShow
    cluster_list = oio.cli.cluster.cluster:ClusterList
    cluster_local_list = oio.cli.cluster.cluster:ClusterLocalList
    cluster_unlockall = oio.cli.cluster.cluster:ClusterUnlockAll
    cluster_unlock = oio.cli.cluster.cluster:ClusterUnlock
    cluster_lock = oio.cli.cluster.cluster:ClusterLock
    cluster_flush = oio.cli.cluster.cluster:ClusterFlush
    cluster_wait = oio.cli.cluster.cluster:ClusterWait
    cluster_local_conf = oio.cli.cluster.cluster:LocalNSConf
openio.election =
    election_debug = oio.cli.election.election:ElectionDebug
    election_leave = oio.cli.election.election:ElectionLeave
    election_ping = oio.cli.election.election:ElectionPing
    election_status = oio.cli.election.election:ElectionStatus
    election_sync = oio.cli.election.election:ElectionSync

oio.conscience.checker =
    http = oio.conscience.checker.http:HttpChecker
    tcp = oio.conscience.checker.tcp:TcpChecker
oio.conscience.stats =
    http = oio.conscience.stats.http:HttpStat
    rawx = oio.conscience.stats.rawx:RawxStat
    meta = oio.conscience.stats.meta:MetaStat
    system = oio.conscience.stats.system:SystemStat
    volume = oio.conscience.stats.volume:VolumeStat

oio.event.handler_factory =
    default = oio.event.handlers.base:handler_factory

oio.event.filter_factory =
    account_update = oio.event.filters.account_update:filter_factory
    volume_index = oio.event.filters.volume_index:filter_factory
    content_cleaner = oio.event.filters.content_cleaner:filter_factory
    notify = oio.event.filters.notify:filter_factory
    noop = oio.event.filters.noop:filter_factory
    logger = oio.event.filters.logger:filter_factory
    bury = oio.event.filters.bury:filter_factory

[wheel]
universal = 1
