[metadata]
name = oio
description = OpenIO Software Defined Storage
summary = OpenIO SDS
author = OpenIO
author_email = support@openio.io
url = https://github.com/open-io/oio-sds

[pbr]
skip_authors = True
skip_changelog = True

[files]
packages =
    oio
scripts =
    bin/oio-account-server
    bin/oio-blob-registrator
    bin/oio-blob-auditor
    bin/oio-blob-mover
    bin/oio-blob-improver
    bin/oio-blob-indexer
    bin/oio-blob-rebuilder
    bin/oio-blob-converter
    bin/oio-check-services
    bin/oio-conscience-agent
    bin/oio-crawler-storage-tierer
    bin/oio-crawler-integrity
    bin/oio-event-agent
    bin/oio-meta2-indexer
    bin/oio-meta1-rebuilder
    bin/oio-meta2-rebuilder
    bin/oio-meta2-mover
    bin/oio-check-master
    bin/oio-xcute-orchestrator
    bin/oio-xcute-server

[entry_points]
console_scripts =
    openio = oio.cli.common.shell:main
    openio-admin = oio.cli.admin:main

openio.account =
    account_show = oio.cli.account.account:ShowAccount
    account_create = oio.cli.account.account:CreateAccount
    account_delete = oio.cli.account.account:DeleteAccount
    account_list = oio.cli.account.account:ListAccounts
    account_set = oio.cli.account.account:SetAccount
    account_unset = oio.cli.account.account:UnsetAccount
    account_refresh = oio.cli.account.account:RefreshAccount
    account_flush = oio.cli.account.account:FlushAccount
openio.container =
    container_create = oio.cli.container.container:CreateContainer
    container_delete = oio.cli.container.container:DeleteContainer
    container_flush = oio.cli.container.container:FlushContainer
    container_list = oio.cli.container.container:ListContainer
    container_locate = oio.cli.container.container:LocateContainer
    container_purge = oio.cli.container.container:PurgeContainer
    container_refresh = oio.cli.container.container:RefreshContainer
    container_save = oio.cli.container.container:SaveContainer
    container_set = oio.cli.container.container:SetContainer
    container_show = oio.cli.container.container:ShowContainer
    container_snapshot = oio.cli.container.container:SnapshotContainer
    container_touch = oio.cli.container.container:TouchContainer
    container_unset = oio.cli.container.container:UnsetContainer
openio.lifecycle =
    lifecycle_apply = oio.cli.lifecycle.lifecycle:LifecycleApply
    lifecycle_get = oio.cli.lifecycle.lifecycle:LifecycleGet
    lifecycle_set = oio.cli.lifecycle.lifecycle:LifecycleSet
openio.object =
    object_locate = oio.cli.object.object:LocateObject
    object_show = oio.cli.object.object:ShowObject
    object_create = oio.cli.object.object:CreateObject
    object_save = oio.cli.object.object:SaveObject
    object_drain = oio.cli.object.object:DrainObject
    object_delete = oio.cli.object.object:DeleteObject
    object_touch = oio.cli.object.object:TouchObject
    object_list = oio.cli.object.object:ListObject
    object_purge = oio.cli.object.object:PurgeObject
    object_set = oio.cli.object.object:SetObject
    object_unset = oio.cli.object.object:UnsetObject
    object_link = oio.cli.object.object:LinkObject
openio.reference =
    reference_locate = oio.cli.reference.reference:LocateReference
    reference_show = oio.cli.reference.reference:ShowReference
    reference_list = oio.cli.reference.reference:ListReference
    reference_create = oio.cli.reference.reference:CreateReference
    reference_delete = oio.cli.reference.reference:DeleteReference
    reference_set = oio.cli.reference.reference:SetReference
    reference_unset = oio.cli.reference.reference:UnsetReference
    reference_link = oio.cli.reference.reference:LinkReference
    reference_poll = oio.cli.reference.reference:PollReference
    reference_unlink = oio.cli.reference.reference:UnlinkReference
    reference_force = oio.cli.reference.reference:ForceReference
openio.volume =
    volume_show = oio.cli.volume.volume:ShowVolume
    volume_assignation = oio.cli.volume.volume:DisplayVolumeAssignation
    volume_admin_incident = oio.cli.volume.volume:IncidentAdminVolume
    volume_admin_lock = oio.cli.volume.volume:LockAdminVolume
    volume_admin_unlock = oio.cli.volume.volume:UnlockAdminVolume
    volume_admin_show = oio.cli.volume.volume:ShowAdminVolume
    volume_admin_clear = oio.cli.volume.volume:ClearAdminVolume
    volume_admin_bootstrap = oio.cli.volume.volume:BootstrapVolume
openio.rdir =
    rdir_bootstrap = oio.cli.rdir.rdir:RdirBootstrap
    rdir_assignments = oio.cli.rdir.rdir:RdirAssignments
openio.directory =
    directory_bootstrap = oio.cli.directory.directory:DirectoryInit
    directory_decommission = oio.cli.directory.directory:DirectoryDecommission
    directory_dump = oio.cli.directory.directory:DirectoryList
    directory_rebalance = oio.cli.directory.directory:DirectoryRebalance
    directory_restore = oio.cli.directory.directory:DirectoryRestore
    directory_warmup = oio.cli.directory.directory:DirectoryWarmup
openio.events =
    events_exhume = oio.cli.events.events:EventsExhume
    events_stats = oio.cli.events.events:StatsEvents
openio.cluster =
    cluster_show = oio.cli.cluster.cluster:ClusterShow
    cluster_list = oio.cli.cluster.cluster:ClusterList
    cluster_local_list = oio.cli.cluster.cluster:ClusterLocalList
    cluster_unlockall = oio.cli.cluster.cluster:ClusterUnlockAll
    cluster_unlock = oio.cli.cluster.cluster:ClusterUnlock
    cluster_lock = oio.cli.cluster.cluster:ClusterLock
    cluster_flush = oio.cli.cluster.cluster:ClusterFlush
    cluster_deregister = oio.cli.cluster.cluster:ClusterDeregister
    cluster_resolve = oio.cli.cluster.cluster:ClusterResolve
    cluster_wait = oio.cli.cluster.cluster:ClusterWait
    cluster_local_conf = oio.cli.cluster.cluster:LocalNSConf
openio.election =
    election_debug = oio.cli.election.election:ElectionDebug
    election_leave = oio.cli.election.election:ElectionLeave
    election_ping = oio.cli.election.election:ElectionPing
    election_status = oio.cli.election.election:ElectionStatus
    election_sync = oio.cli.election.election:ElectionSync
openio.zk =
    zk_reset = oio.cli.zk.set:ElectionReset
    zk_stat = oio.cli.zk.set:ElectionStat
    zk_smudge = oio.cli.zk.set:ElectionSmudge
    zk_armageddon = oio.cli.zk.set:HierarchyArmageddon
    zk_bootstrap = oio.cli.zk.set:HierarchyBootstrap

openio.admin =
    account-service_rebuild = oio.cli.admin.service_rebuild:AccountServiceRebuild
    account_check = oio.cli.admin.item_check:AccountCheck
    account_locate = oio.cli.admin.item_locate:AccountLocate
    account_repair = oio.cli.admin.item_repair:AccountRepair
    chunk_check = oio.cli.admin.item_check:ChunkCheck
    chunk_distributed-rebuild = oio.cli.admin.item_rebuild:ChunkDistributedRebuild
    chunk_locate = oio.cli.admin.item_locate:ChunkLocate
    chunk_rebuild = oio.cli.admin.item_rebuild:ChunkRebuild
    conscience_get-config = oio.cli.admin.service_config:ServiceGetConfig
    container_check = oio.cli.admin.item_check:ContainerCheck
    container_locate = oio.cli.admin.item_locate:ContainerLocate
    container_move = oio.cli.admin.item_move:ContainerMove
    container_repair = oio.cli.admin.item_repair:ContainerRepair
    container_vacuum = oio.cli.admin.item_vacuum:ContainerVacuum
    directory_check = oio.cli.admin.service_check:DirectoryCheck
    election_debug = oio.cli.election.election:ElectionDebug
    election_leave = oio.cli.election.election:ElectionLeave
    election_ping = oio.cli.election.election:ElectionPing
    election_status = oio.cli.election.election:ElectionStatus
    election_sync = oio.cli.election.election:ElectionSync
    election_balance = oio.cli.election.election:ElectionBalance
    meta0_check = oio.cli.admin.service_check:Meta0Check
    meta0_get-config = oio.cli.admin.service_config:ServiceGetConfig
    meta0_info = oio.cli.admin.service_info:ServiceInfo
    meta0_set-config = oio.cli.admin.service_config:ServiceSetConfig
    meta1_check = oio.cli.admin.service_check:Meta1Check
    meta1_decache = oio.cli.admin.service_decache:Meta1Decache
    meta1_get-config = oio.cli.admin.service_config:ServiceGetConfig
    meta1_info = oio.cli.admin.service_info:ServiceInfo
    meta1_rebuild = oio.cli.admin.service_rebuild:Meta1Rebuild
    meta1_set-config = oio.cli.admin.service_config:ServiceSetConfig
    meta2_decache = oio.cli.admin.service_decache:Meta2Decache
    meta2_get-config = oio.cli.admin.service_config:ServiceGetConfig
    meta2_info = oio.cli.admin.service_info:ServiceInfo
    meta2_list_containers = oio.cli.admin.service_list:Meta2ListContainers
    meta2_rebuild = oio.cli.admin.service_rebuild:Meta2Rebuild
    meta2_set-config = oio.cli.admin.service_config:ServiceSetConfig
    object_check = oio.cli.admin.item_check:ObjectCheck
    object_locate = oio.cli.admin.item_locate:ObjectLocate
    object_repair = oio.cli.admin.item_repair:ObjectRepair
    oioproxy_decache = oio.cli.admin.service_decache:ProxyDecache
    oioproxy_get-config = oio.cli.admin.service_config:ProxyGetConfig
    oioproxy_set-config = oio.cli.admin.service_config:ProxySetConfig
    rawx_check = oio.cli.admin.service_check:RawxCheck
    rawx_distributed-rebuild = oio.cli.admin.service_rebuild:RawxDistributedRebuild
    rawx_list_containers = oio.cli.admin.service_list:RawxListContainers
    rawx_rebuild = oio.cli.admin.service_rebuild:RawxRebuild
    rdir_check = oio.cli.admin.service_check:RdirCheck
    sqlx_get-config = oio.cli.admin.service_config:ServiceGetConfig
    sqlx_info = oio.cli.admin.service_info:ServiceInfo
    sqlx_set-config = oio.cli.admin.service_config:ServiceSetConfig
    xcute_job_delete = oio.cli.admin.xcute.job:JobDelete
    xcute_job_list = oio.cli.admin.xcute.job:JobList
    xcute_job_pause = oio.cli.admin.xcute.job:JobPause
    xcute_job_resume = oio.cli.admin.xcute.job:JobResume
    xcute_job_show = oio.cli.admin.xcute.job:JobShow
    xcute_rawx_decommission = oio.cli.admin.xcute.rawx:RawxDecommission
    xcute_rawx_rebuild = oio.cli.admin.xcute.rawx:RawxRebuild

oio.conscience.checker =
    asn1 = oio.conscience.checker.asn1:Asn1PingChecker
    http = oio.conscience.checker.http:HttpChecker
    tcp = oio.conscience.checker.tcp:TcpChecker
oio.conscience.stats =
    beanstalkd = oio.conscience.stats.beanstalkd:BeanstalkdStat
    http = oio.conscience.stats.http:HttpStat
    meta = oio.conscience.stats.meta:MetaStat
    oioproxy = oio.conscience.stats.proxy:ProxyStat
    rawx = oio.conscience.stats.rawx:RawxStat
    system = oio.conscience.stats.system:SystemStat
    volume = oio.conscience.stats.volume:VolumeStat

oio.event.handler_factory =
    default = oio.event.handlers.base:handler_factory

oio.event.filter_factory =
    account_update = oio.event.filters.account_update:filter_factory
    bury = oio.event.filters.bury:filter_factory
    dump = oio.event.filters.dump:filter_factory
    content_cleaner = oio.event.filters.content_cleaner:filter_factory
    logger = oio.event.filters.logger:filter_factory
    meta2_index = oio.event.filters.meta2_index:filter_factory
    noop = oio.event.filters.noop:filter_factory
    notify = oio.event.filters.notify:filter_factory
    volume_index = oio.event.filters.volume_index:filter_factory
    xcute = oio.event.filters.xcute:filter_factory
    webhook = oio.event.filters.webhook:filter_factory

[wheel]
universal = 1
